src/test/deca/syntax/invalid/sansobjet/lex_include_valid.deca
// test l'inclusion de fichier
// sortie: token filename


#include "test"



